# Autonomous-Ship

./: .gitignore  README.md  Ship.f3d  arduino.ino  propeller.f3d
cad/: rudder.f3d
src/camera/: CMakeLists.txt  package.xml
src/camera/config/: color_detection_params.yaml
src/camera/launch/: camera_launch.py
src/camera/scripts/: color_calibration.py  cv_comparision.py  processing_time.py  record_video.py  view_processed_image.py
src/camera/src/: camera_node.cpp  color_detection_node.cpp  colors_detection_node.cpp  movement_detection_node.cpp  obstacle_detection_node.cpp  yolo_node.cpp
src/launch_files/: package.xml  setup.py
src/launch_files/launch/: boat_launch.py
src/sensor_fusion/: package.xml  setup.py
src/sensor_fusion/sensor_fusion/: fusion_node.py
src/ultrasonic_sensor/: CMakeLists.txt  package.xml
src/ultrasonic_sensor/include/: libHCSR04.hpp
src/ultrasonic_sensor/src/: libHCSR04.cpp  ultrasonic_node.cpp
